5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1747_1539.log
== TEST (2019-05-16 11:05:10) 
-- CODE:
x = float(input('numr'))
k = int(input('numr'))

#while 
a = -1*(-x)
-- OUTPUT:
3.7768
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:05:30) 
-- CODE:
x = float(input('numr'))
k = int(input('numr'))

#while 
a = -1*(-x)
print(a)
-- OUTPUT:
0.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:15:07) 
-- CODE:
x = float(input('numr'))
k = int(input('numr'))
i = 0
a = 0
b = 0
while k>=i+1:
	b += a
	if i%2 = 0:
		a = x**i
	else:
		a = -1*(x**i)
	b = a
	i += 1
print(a)
-- ERROR:
File "XXXX", line 8
    if i%2 = 0:
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:15:35) 
-- CODE:
x = float(input('numr'))
k = int(input('numr'))
i = 0
a = 0
b = 0
while k>=i+1:
	b += a
	if (i%2 = 0):
		a = x**i
	else:
		a = -1*(x**i)
	b = a
	i += 1
print(a)
-- ERROR:
File "XXXX", line 8
    if (i%2 = 0):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:16:17) 
-- CODE:
x = float(input('numr'))
k = int(input('numr'))
i = 0
a = 0
b = 0
while k>=i+1:
	b += a
	if (i%2 == 0):
		a = x**i
	else:
		a = -1*(x**i)
	b = a
	i += 1
print(a)
-- OUTPUT:
0.31360000000000005
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:16:42) 
-- CODE:
x = float(input('numr'))
k = int(input('numr'))
i = 0
a = 0
b = 0
while k>=i+1:
	b += a
	if (i%2 == 0):
		a = x**i
	else:
		a = -1*(x**i)
	b = a
	i += 1
print(a)
-- EXECUTION TIME:
0.196422
-- TEST CASE 1:
---- input:
0.56
3
---- correct output:
0.7536
---- user output:
0.31360000000000005
-- TEST CASE 2:
---- input:
0.62
4
---- correct output:
0.526072
---- user output:
-0.23832799999999998
-- TEST CASE 3:
---- input:
0.56
2
---- correct output:
0.44
---- user output:
-0.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:22:59) 
-- CODE:
x = float(input('numr'))
k = int(input('numr'))
i = 0
b = 0
while k-1>=i:
	if i%2 == 0:
		a = x**i
	else:
		a = -1*(x**i)
	c = a + b
	b = a
	i += 1
	a = 0
print(c)
-- EXECUTION TIME:
0.216204
-- TEST CASE 1:
---- input:
0.56
3
---- correct output:
0.7536
---- user output:
-0.2464
-- TEST CASE 2:
---- input:
0.62
4
---- correct output:
0.526072
---- user output:
0.14607200000000004
-- TEST CASE 3:
---- input:
0.56
2
---- correct output:
0.44
---- user output:
0.43999999999999995
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:23:00) 
-- CODE:
x = float(input('numr'))
k = int(input('numr'))
i = 0
b = 0
while k-1>=i:
	if i%2 == 0:
		a = x**i
	else:
		a = -1*(x**i)
	c = a + b
	b = a
	i += 1
	a = 0
print(c)
-- OUTPUT:
-0.2464
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:23:17) 
-- CODE:
x = float(input('numr'))
k = int(input('numr'))
i = 0
b = 0
while k-1>=i:
	if i%2 == 0:
		a = x**i
	else:
		a = -1*(x**i)
	c = a + b
	b = a
	i += 1
	a = 0
print(c)
-- EXECUTION TIME:
0.180854
-- TEST CASE 1:
---- input:
0.56
3
---- correct output:
0.7536
---- user output:
-0.2464
-- TEST CASE 2:
---- input:
0.62
4
---- correct output:
0.526072
---- user output:
0.14607200000000004
-- TEST CASE 3:
---- input:
0.56
2
---- correct output:
0.44
---- user output:
0.43999999999999995
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:26:18) 
-- CODE:
x = float(input('numr'))
k = int(input('numr'))
i = 0
b = 0
while k-1>=i:
	if i%2 == 0:
		a = x**i
	else:
		a = -1*(x**i)
	c = a + b
	b = c
	i += 1
	a = 0
print(c)
-- EXECUTION TIME:
0.178493
-- TEST CASE 1:
---- input:
0.56
3
---- correct output:
0.7536
---- user output:
0.7536
-- TEST CASE 2:
---- input:
0.62
4
---- correct output:
0.526072
---- user output:
0.526072
-- TEST CASE 3:
---- input:
0.56
2
---- correct output:
0.44
---- user output:
0.43999999999999995
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:26:55) 
-- CODE:
x = float(input('numr'))
k = int(input('numr'))
i = 0
b = 0
while k-1>=i:
	if i%2 == 0:
		a = x**i
	else:
		a = -1*(x**i)
	c = a + b
	b = c
	i += 1
	a = 0
print(c)
-- OUTPUT:
0.7536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:27:06) 
-- CODE:
x = float(input('numr'))
k = int(input('numr'))
i = 0
b = 0
while k-1>=i:
	if i%2 == 0:
		a = x**i
	else:
		a = -1*(x**i)
	c = a + b
	b = c
	i += 1
	a = 0
print(c)
-- OUTPUT:
0.7536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:27:15) 
-- CODE:
x = float(input('numr'))
k = int(input('numr'))
i = 0
b = 0
while k-1>=i:
	if i%2 == 0:
		a = x**i
	else:
		a = -1*(x**i)
	c = a + b
	b = c
	i += 1
	a = 0
print(c)
-- OUTPUT:
0.7536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:27:24) 
-- CODE:
x = float(input('numr'))
k = int(input('numr'))
i = 0
b = 0
while k-1>=i:
	if i%2 == 0:
		a = x**i
	else:
		a = -1*(x**i)
	c = a + b
	b = c
	i += 1
	a = 0
print(c)
-- OUTPUT:
0.7536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:27:32) 
-- CODE:
x = float(input('numr'))
k = int(input('numr'))
i = 0
b = 0
while k-1>=i:
	if i%2 == 0:
		a = x**i
	else:
		a = -1*(x**i)
	c = a + b
	b = c
	i += 1
	a = 0
print(c)
-- OUTPUT:
0.7536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:28:37) 
-- CODE:
x = float(input('numr'))
k = int(input('numr'))
i = 0
b = 0
while k>=i:
	if i%2 == 0:
		a = x**i
	else:
		a = -1*(x**i)
	c = a + b
	b = c
	i += 1
	a = 0
print(c)
-- OUTPUT:
0.577984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:28:55) 
-- CODE:
x = float(input('numr'))
k = int(input('numr'))
i = 0
b = 0
while k-1>=i:
	if i%2 == 0:
		a = x**i
	else:
		a = -1*(x**i)
	c = a + b
	b = c
	i += 1
	a = 0
print(c)
-- OUTPUT:
0.7536
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:30:02) 
-- CODE:
x = float(input('numr'))
k = int(input('numr'))
i = 0
b = 0
while k-1>=i:
	if i%2 == 0:
		a = x**i
	else:
		a = -1*(x**i)
	c = a + b
	b = c
	i += 1
	a = 0
print(round(c,7))
-- EXECUTION TIME:
0.146213
-- TEST CASE 1:
---- input:
0.56
3
---- correct output:
0.7536
---- user output:
0.7536
-- TEST CASE 2:
---- input:
0.62
4
---- correct output:
0.526072
---- user output:
0.526072
-- TEST CASE 3:
---- input:
0.56
2
---- correct output:
0.44
---- user output:
0.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
